# jeopardy-game

./: .gitignore  .terminal_log  CLAUDE.md  PROJECT.md  README.md  curriculum.md  progress.json  pyproject.toml  quiz_bank.md  render.yaml  requirements.txt  session_log.md  start.sh  test_jeopardy.db
notebooks/: 00_getting_started.ipynb  01_r_to_python_bridge.ipynb  02_data_types_variables.ipynb  03_collections.ipynb  04_control_flow.ipynb  04b_recursion.ipynb  05_functions.ipynb  06_file_io_errors.ipynb  07_modules_project_structure.ipynb  08_testing.ipynb  09_git_github.ipynb  10_classes_oop.ipynb  11_sql_basics.ipynb
notebooks/data/: malformed_data.csv  sample_data.csv  sample_jeopardy.json
scripts/: download_data.py
src/jeopardy/: CLAUDE.md  READEME.md  __init__.py  cli.py  data.py  database.py  game.py  multiplayer.html  multiplayer.py  state.py  web.py
tests/jeopardy/: conftest.py  test_data.py  test_database.py  test_game.py  test_state.py
