[project]
name = "learning-module"
version = "0.1.0"
description = "Python learning module for transitioning from R"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "polars>=1.0.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.14.3",
    "streamlit>=1.53.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
jeopardy = [
    "datasets>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
jeopardy = "jeopardy.cli:play_game"
jeopardy-multiplayer = "jeopardy.multiplayer:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jeopardy"]

[tool.hatch.build.targets.sdist]
include = ["src/jeopardy"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
